# udacity_ml_dev_ops

./: .gitignore
.github/workflows/: python-app.yml
build-ml-pipeline-for-short-term-rental-prices/: README.md  config.yaml  main.py  rf_config.json
build-ml-pipeline-for-short-term-rental-prices/src/basic_cleaning/: conda.yml  run.py
build-ml-pipeline-for-short-term-rental-prices/src/eda/: EDA.ipynb
build-ml-pipeline-for-short-term-rental-prices/src/train_random_forest/: run.py
census_bureau_classification/: .gitignore  README.md  call_live_api.py  census_profile_report.html  pyproject.toml  run.py  slice_output.txt
census_bureau_classification/artifacts/: encoder.joblib
census_bureau_classification/src/census/: census_profile_report.html  config.py  main.py  model_card.md  model_card_template.md  sanitycheck.py
census_bureau_classification/src/census/data/: clean_data.py  process_data.py
census_bureau_classification/src/census/model/: model.py  train_model.py
census_bureau_classification/src/census/tests/: test_api.py  test_model.py
customer_churn/: README.md  churn_library.py  churn_notebook.ipynb  churn_script_logging_and_tests.py  pyproject.toml
customer_churn/models/: logistic_model.pkl  scaler.pkl
dynamic_risk_assessment_sytem/: README.md  apicalls.py  app.py  deployment.py  diagnostics.py  fullprocess.py  ingestion.py  main.py  pipeline.logs  pyproject.toml  reporting.py  scoring.py  training.py
dynamic_risk_assessment_sytem/ingesteddata/: ingestedfiles.txt
dynamic_risk_assessment_sytem/models/: apireturns.txt  apireturns2.txt  model_metadata.json  trainedmodel.pkl
dynamic_risk_assessment_sytem/practicemodels/: apireturns.txt
dynamic_risk_assessment_sytem/production_deployment/: ingestedfiles.txt  trainedmodel.pkl
ml_pipeline_rental_prices/src/data_check/: test_data.py
