[project]
name = "customer-churn"
version = "0.1.0"
description = "Customer churn prediction ML pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "scikit-learn>=0.24.1",
    "shap>=0.40.0",
    "joblib>=1.0.1",
    "pandas>=1.2.4",
    "numpy>=1.20.1",
    "matplotlib>=3.3.4",
    "seaborn>=0.11.2",
    "pylint>=2.7.4",
    "autopep8>=1.5.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
