[project]
name = "dynamic-risk-assessment-sytem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7.6"
dependencies = [
    "click==7.1.2",
    "cycler==0.10.0",
    "flask==1.1.2",
    "gunicorn==20.0.4",
    "itsdangerous==1.1.0",
    "jinja2==2.11.3",
    "joblib==1.0.1",
    "kiwisolver==1.3.1",
    "markupsafe==1.1.1",
    "matplotlib==3.3.4",
    "numpy==1.20.1",
    "pandas==1.2.2",
    "pillow==8.1.0",
    "pyparsing==2.4.7",
    "python-dateutil==2.8.1",
    "pytz==2021.1",
    "scikit-learn==0.24.1",
    "scipy==1.6.1",
    "seaborn==0.11.1",
    "six==1.15.0",
    "sklearn==0.0",
    "threadpoolctl==2.1.0",
    "werkzeug==1.0.1",
]
